Further digging into BoardsModel with CoreData
New full list of default boards. New sorting, new boards categories
list.

--- a/dvach-browser/DefaultBoards.plist
+++ b/dvach-browser/DefaultBoards.plist
@@ -4,15 +4,491 @@
 <array>
 	<dict>
 		<key>boardId</key>
-		<string>a</string>
+		<string>au</string>
 		<key>name</key>
 		<string>Автомобили</string>
+		<key>categoryId</key>
+		<integer>1</integer>
 	</dict>
 	<dict>
 		<key>boardId</key>
-		<string>cute</string>
+		<string>bi</string>
 		<key>name</key>
-		<string>Милое</string>
+		<string>Велосипеды</string>
+		<key>categoryId</key>
+		<integer>1</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>biz</string>
+		<key>name</key>
+		<string>Бизнес</string>
+		<key>categoryId</key>
+		<integer>1</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>bo</string>
+		<key>name</key>
+		<string>Книги</string>
+		<key>categoryId</key>
+		<integer>1</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>c</string>
+		<key>name</key>
+		<string>Комиксы и мультфильмы</string>
+		<key>categoryId</key>
+		<integer>1</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>em</string>
+		<key>name</key>
+		<string>Другие страны</string>
+		<key>categoryId</key>
+		<integer>1</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>ew</string>
+		<key>name</key>
+		<string>Конец света</string>
+		<key>categoryId</key>
+		<integer>1</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>fa</string>
+		<key>name</key>
+		<string>Мода и стиль</string>
+		<key>categoryId</key>
+		<integer>1</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>fiz</string>
+		<key>name</key>
+		<string>Физкультура</string>
+		<key>categoryId</key>
+		<integer>1</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>fl</string>
+		<key>name</key>
+		<string>Иностранные языки</string>
+		<key>categoryId</key>
+		<integer>1</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>hh</string>
+		<key>name</key>
+		<string>Hip-hop</string>
+		<key>categoryId</key>
+		<integer>1</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>hi</string>
+		<key>name</key>
+		<string>История</string>
+		<key>categoryId</key>
+		<integer>1</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>me</string>
+		<key>name</key>
+		<string>Медицина</string>
+		<key>categoryId</key>
+		<integer>1</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>mo</string>
+		<key>name</key>
+		<string>Мотоциклы</string>
+		<key>categoryId</key>
+		<integer>1</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>ne</string>
+		<key>name</key>
+		<string>Животные и природа</string>
+		<key>categoryId</key>
+		<integer>1</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>ph</string>
+		<key>name</key>
+		<string>Философия</string>
+		<key>categoryId</key>
+		<integer>1</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>psy</string>
+		<key>name</key>
+		<string>Психология и психиатрия</string>
+		<key>categoryId</key>
+		<integer>1</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>sf</string>
+		<key>name</key>
+		<string>Научная фантастика</string>
+		<key>categoryId</key>
+		<integer>1</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>sci</string>
+		<key>name</key>
+		<string>Наука</string>
+		<key>categoryId</key>
+		<integer>1</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>sn</string>
+		<key>name</key>
+		<string>Паранормальные явления</string>
+		<key>categoryId</key>
+		<integer>1</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>sp</string>
+		<key>name</key>
+		<string>Спорт</string>
+		<key>categoryId</key>
+		<integer>1</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>spc</string>
+		<key>name</key>
+		<string>Космос и астрономия</string>
+		<key>categoryId</key>
+		<integer>1</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>tr</string>
+		<key>name</key>
+		<string>Транспорт и авиация</string>
+		<key>categoryId</key>
+		<integer>1</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>tv</string>
+		<key>name</key>
+		<string>Сериалы</string>
+		<key>categoryId</key>
+		<integer>1</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>un</string>
+		<key>name</key>
+		<string>Образование</string>
+		<key>categoryId</key>
+		<integer>1</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>w</string>
+		<key>name</key>
+		<string>Оружие</string>
+		<key>categoryId</key>
+		<integer>1</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>wh</string>
+		<key>name</key>
+		<string>Warhammer</string>
+		<key>categoryId</key>
+		<integer>1</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>wm</string>
+		<key>name</key>
+		<string>Военная техника</string>
+		<key>categoryId</key>
+		<integer>1</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>mov</string>
+		<key>name</key>
+		<string>Фильмы</string>
+		<key>categoryId</key>
+		<integer>1</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>br</string>
+		<key>name</key>
+		<string>Барахолка</string>
+		<key>categoryId</key>
+		<integer>1</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>mu</string>
+		<key>name</key>
+		<string>Музыка</string>
+		<key>categoryId</key>
+		<integer>1</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>fs</string>
+		<key>name</key>
+		<string>Фэнтези</string>
+		<key>categoryId</key>
+		<integer>1</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>cut</string>
+		<key>name</key>
+		<string>Культура</string>
+		<key>categoryId</key>
+		<integer>1</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>out</string>
+		<key>name</key>
+		<string>Активный отдых</string>
+		<key>categoryId</key>
+		<integer>1</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>di</string>
+		<key>name</key>
+		<string>Столовая</string>
+		<key>categoryId</key>
+		<integer>2</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>de</string>
+		<key>name</key>
+		<string>Дизайн</string>
+		<key>categoryId</key>
+		<integer>2</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>diy</string>
+		<key>name</key>
+		<string>Хобби</string>
+		<key>categoryId</key>
+		<integer>2</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>dom</string>
+		<key>name</key>
+		<string>Домострой</string>
+		<key>categoryId</key>
+		<integer>2</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>izd</string>
+		<key>name</key>
+		<string>Графомания</string>
+		<key>categoryId</key>
+		<integer>2</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>mus</string>
+		<key>name</key>
+		<string>Музыканты</string>
+		<key>categoryId</key>
+		<integer>2</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>pa</string>
+		<key>name</key>
+		<string>Живопись</string>
+		<key>categoryId</key>
+		<integer>2</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>td</string>
+		<key>name</key>
+		<string>Трёхмерная графика</string>
+		<key>categoryId</key>
+		<integer>2</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>wrk</string>
+		<key>name</key>
+		<string>Работа и карьера</string>
+		<key>categoryId</key>
+		<integer>2</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>trv</string>
+		<key>name</key>
+		<string>Путешествия и отдых</string>
+		<key>categoryId</key>
+		<integer>2</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>hw</string>
+		<key>name</key>
+		<string>Компьютерное железо</string>
+		<key>categoryId</key>
+		<integer>3</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>pr</string>
+		<key>name</key>
+		<string>Программирование</string>
+		<key>categoryId</key>
+		<integer>3</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>ra</string>
+		<key>name</key>
+		<string>Радиотехника</string>
+		<key>categoryId</key>
+		<integer>3</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>s</string>
+		<key>name</key>
+		<string>Программы</string>
+		<key>categoryId</key>
+		<integer>3</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>t</string>
+		<key>name</key>
+		<string>Техника</string>
+		<key>categoryId</key>
+		<integer>3</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>web</string>
+		<key>name</key>
+		<string>Web-мастера</string>
+		<key>categoryId</key>
+		<integer>3</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>gd</string>
+		<key>name</key>
+		<string>Gamedev</string>
+		<key>categoryId</key>
+		<integer>3</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>mobi</string>
+		<key>name</key>
+		<string>Мобильные устройства и приложения</string>
+		<key>categoryId</key>
+		<integer>3</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>bg</string>
+		<key>name</key>
+		<string>Настольные игры</string>
+		<key>categoryId</key>
+		<integer>4</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>cg</string>
+		<key>name</key>
+		<string>Консоли</string>
+		<key>categoryId</key>
+		<integer>4</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>mc</string>
+		<key>name</key>
+		<string>Minecraft</string>
+		<key>categoryId</key>
+		<integer>4</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>mmo</string>
+		<key>name</key>
+		<string>Massive multiplayer online games</string>
+		<key>categoryId</key>
+		<integer>4</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>tes</string>
+		<key>name</key>
+		<string>The elder scrolls</string>
+		<key>categoryId</key>
+		<integer>4</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>vg</string>
+		<key>name</key>
+		<string>Видеоигры</string>
+		<key>categoryId</key>
+		<integer>4</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>wr</string>
+		<key>name</key>
+		<string>Текстовые авторские рпг</string>
+		<key>categoryId</key>
+		<integer>4</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>gb</string>
+		<key>name</key>
+		<string>Азартные игры</string>
+		<key>categoryId</key>
+		<integer>4</integer>
+	</dict>
+	<dict>
+		<key>boardId</key>
+		<string>moba</string>
+		<key>name</key>
+		<string>Multiplayer Online Battle Arena</string>
+		<key>categoryId</key>
+		<integer>4</integer>
 	</dict>
 </array>
 </plist>
