Enable dark color theme for gallery. Related to #53

--- a/dvach-browser/Settings.bundle/Root.plist
+++ b/dvach-browser/Settings.bundle/Root.plist
@@ -5,6 +5,16 @@
 	<key>PreferenceSpecifiers</key>
 	<array>
 		<dict>
+			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+			<key>Title</key>
+			<string>Dark theme</string>
+			<key>Key</key>
+			<string>enableDarkTheme</string>
+			<key>DefaultValue</key>
+			<false/>
+		</dict>
+		<dict>
 			<key>AutocapitalizationType</key>
 			<string>None</string>
 			<key>AutocorrectionType</key>
