New option to set font size to less then average. Related to #87.

--- a/dvach-browser/Settings.bundle/Root.plist
+++ b/dvach-browser/Settings.bundle/Root.plist
@@ -42,6 +42,16 @@
 			<key>Type</key>
 			<string>PSToggleSwitchSpecifier</string>
 		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+			<key>Title</key>
+			<string>Little font</string>
+			<key>Key</key>
+			<string>enableLittleBodyFont</string>
+			<key>DefaultValue</key>
+			<false/>
+		</dict>
 	</array>
 	<key>StringsTable</key>
 	<string>Root</string>
