New ReCaptcha and get rid of defaults change notifications. Increase build number.

--- a/dvach-browser/Settings.bundle/Root.plist
+++ b/dvach-browser/Settings.bundle/Root.plist
@@ -52,6 +52,16 @@
 			<key>Type</key>
 			<string>PSTextFieldSpecifier</string>
 		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSGroupSpecifier</string>
+			<key>Title</key>
+			<string>Reload app</string>
+			<key>Key</key>
+			<string>descriptionText</string>
+			<key>DefaultValue</key>
+			<string></string>
+		</dict>
 	</array>
 	<key>StringsTable</key>
 	<string>Root</string>
