--- a/dvach-browser/Info.plist
+++ b/dvach-browser/Info.plist
@@ -15,15 +15,17 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.3.0</string>
+	<string>1.4.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>84</string>
+	<string>85</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
+		<string>googlechromes</string>
+		<string>googlechrome</string>
 		<string>vlc</string>
-		<string>googlechrome-x-callback:</string>
+		<string>googlechrome-x-callback</string>
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
