Add LSApplicationQueriesSchemes in order to make possibility to reach Youtube App via activity

--- a/dvach-browser/Info.plist
+++ b/dvach-browser/Info.plist
@@ -22,6 +22,7 @@
 	<string>85</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
+		<string>youtube</string>
 		<string>googlechromes</string>
 		<string>googlechrome</string>
 		<string>vlc</string>
