New restricted boards

--- a/dvach-browser/BadBoards.plist
+++ b/dvach-browser/BadBoards.plist
@@ -2,6 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <array>
+	<string>fs</string>
+	<string>me</string>
+	<string>fiz</string>
+	<string>au</string>
+	<string>fs</string>
+	<string>em</string>
+	<string>hh</string>
+	<string>hi</string>
 	<string>tv</string>
 	<string>cul</string>
 	<string>pa</string>
