--- a/dvach-browser/BadBoards.plist
+++ b/dvach-browser/BadBoards.plist
@@ -2,6 +2,13 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <array>
+	<string>bi</string>
+	<string>sn</string>
+	<string>biz</string>
+	<string>sn</string>
+	<string>sci</string>
+	<string>fa</string>
+	<string>mobi</string>
 	<string>fs</string>
 	<string>me</string>
 	<string>fiz</string>
