New boards to block

--- a/dvach-browser/BadBoards.plist
+++ b/dvach-browser/BadBoards.plist
@@ -2,6 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <array>
+	<string>un</string>
+	<string>wr</string>
+	<string>de</string>
+	<string>tr</string>
+	<string>sf</string>
+	<string>sp</string>
+	<string>tes</string>
+	<string>wh</string>
 	<string>psy</string>
 	<string>ph</string>
 	<string>out</string>
