Tweak defaults, start parameters and settings a little

--- a/dvach-browser/Settings.bundle/Root.plist
+++ b/dvach-browser/Settings.bundle/Root.plist
@@ -56,7 +56,7 @@
 			<key>Type</key>
 			<string>PSToggleSwitchSpecifier</string>
 			<key>Title</key>
-			<string>Clear threads</string>
+			<string>Clear cache</string>
 			<key>Key</key>
 			<string>clearThreads</string>
 			<key>DefaultValue</key>
