--- a/dvach-browser/Settings.bundle/Root.plist
+++ b/dvach-browser/Settings.bundle/Root.plist
@@ -18,6 +18,16 @@
 			<key>Type</key>
 			<string>PSToggleSwitchSpecifier</string>
 			<key>Title</key>
+			<string>internalWebmPlayer</string>
+			<key>Key</key>
+			<string>internalWebmPlayer</string>
+			<key>DefaultValue</key>
+			<true/>
+		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+			<key>Title</key>
 			<string>Little font</string>
 			<key>Key</key>
 			<string>enableLittleBodyFont</string>
@@ -33,16 +43,6 @@
 			<string>enableTrafficSavings</string>
 			<key>DefaultValue</key>
 			<false/>
-		</dict>
-		<dict>
-			<key>Type</key>
-			<string>PSToggleSwitchSpecifier</string>
-			<key>Title</key>
-			<string>internalWebmPlayer</string>
-			<key>Key</key>
-			<string>internalWebmPlayer</string>
-			<key>DefaultValue</key>
-			<true/>
 		</dict>
 		<dict>
 			<key>Type</key>
@@ -81,6 +81,28 @@
 			<string>clearThreads</string>
 			<key>DefaultValue</key>
 			<false/>
+		</dict>
+		<dict>
+			<key>Type</key>
+			<string>PSMultiValueSpecifier</string>
+			<key>Title</key>
+			<string>domain</string>
+			<key>Key</key>
+			<string>domain</string>
+			<key>DefaultValue</key>
+			<string>2ch.hk</string>
+			<key>Titles</key>
+			<array>
+				<string>Hong Kong</string>
+				<string>Pearl Marble</string>
+				<string>2 channel</string>
+			</array>
+			<key>Values</key>
+			<array>
+				<string>2ch.hk</string>
+				<string>2ch.pm</string>
+				<string>2channel.hk</string>
+			</array>
 		</dict>
 		<dict>
 			<key>Type</key>
