Add setting to force captcha

--- a/dvach-browser/Settings.bundle/Root.plist
+++ b/dvach-browser/Settings.bundle/Root.plist
@@ -25,6 +25,16 @@
 			<true/>
 		</dict>
 		<dict>
+			<key>Type</key>
+			<string>PSToggleSwitchSpecifier</string>
+			<key>Title</key>
+			<string>Enable captcha</string>
+			<key>Key</key>
+			<string>forceCaptcha</string>
+			<key>DefaultValue</key>
+			<false/>
+		</dict>
+		<dict>
 			<key>AutocapitalizationType</key>
 			<string>None</string>
 			<key>AutocorrectionType</key>
@@ -41,16 +51,6 @@
 			<string>Passcode</string>
 			<key>Type</key>
 			<string>PSTextFieldSpecifier</string>
-		</dict>
-		<dict>
-			<key>Type</key>
-			<string>PSToggleSwitchSpecifier</string>
-			<key>Title</key>
-			<string>Clear cache</string>
-			<key>Key</key>
-			<string>clearThreads</string>
-			<key>DefaultValue</key>
-			<false/>
 		</dict>
 		<dict>
 			<key>Type</key>
@@ -76,13 +76,13 @@
 		</dict>
 		<dict>
 			<key>Type</key>
-			<string>PSGroupSpecifier</string>
+			<string>PSToggleSwitchSpecifier</string>
 			<key>Title</key>
-			<string>Reload app</string>
+			<string>Clear cache</string>
 			<key>Key</key>
-			<string>descriptionText</string>
+			<string>clearThreads</string>
 			<key>DefaultValue</key>
-			<string></string>
+			<false/>
 		</dict>
 	</array>
 	<key>StringsTable</key>
